[gd_scene load_steps=3 format=3 uid="uid://card001"]

[ext_resource type="Script" path="res://scripts/game/card.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="card_style"]
bg_color = Color(0.15, 0.14, 0.13, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.55, 0.52, 0.48, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_left = 10
corner_radius_bottom_right = 10
content_margin_left = 6
content_margin_top = 6
content_margin_right = 6
content_margin_bottom = 6

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(120, 170)
theme_override_styles/panel = SubResource("card_style")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="ArtistBar" type="ColorRect" parent="VBox"]
layout_mode = 2
mouse_filter = 2
custom_minimum_size = Vector2(0, 6)

[node name="ArtistLabel" type="Label" parent="VBox"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
autowrap_mode = 2

[node name="ArtArea" type="TextureRect" parent="VBox"]
layout_mode = 2
mouse_filter = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 60)
expand_mode = 1
stretch_mode = 5

[node name="AuctionLabel" type="Label" parent="VBox"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 11
horizontal_alignment = 0
autowrap_mode = 2
